# CppDecimal

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
doc/: COPYRIGHT.txt  DEDICATION.txt  INSTALL.txt  README.txt
ext/: CMakeLists.txt
src/: CMakeLists.txt  DecContext.cc  DecContext.hh  DecDouble.cc  DecDouble.hh  DecFwd.hh  DecNumber.cc  DecNumber.hh  DecPacked.cc  DecPacked.hh  DecQuad.cc  DecQuad.hh  DecSingle.cc  DecSingle.hh  decContext.h  decNumber.h  decimal  short_alloc.h
tst/: CMakeLists.txt
tst/decimal/: CMakeLists.txt  decimal_t.cc
tst/decnumber/: CMakeLists.txt  decnumber_t.cc
tst/dectests/: CMakeLists.txt  DTRunner.cc  DTRunner.hh  Main.cc  dectest_t.cc
tst/dectests/dectest_sub/: abs0.decTest  add0.decTest  base0.decTest  compare0.decTest  comparetotal0.decTest  divide0.decTest  divideint0.decTest  exp0.decTest  fma0.decTest  inexact0.decTest  ln0.decTest  log100.decTest  max0.decTest  min0.decTest  minus0.decTest  multiply0.decTest  plus0.decTest  power0.decTest  quantize0.decTest  randombound320.decTest  randoms0.decTest  reduce0.decTest  remainder0.decTest  remaindernear0.decTest  rescale0.decTest  rounding0.decTest  samequantum0.decTest  squareroot0.decTest  subtract0.decTest  testall0.decTest  tointegral0.decTest  trim0.decTest
